--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -9,7 +9,8 @@
           "defaultAuthentication": {
             "authenticationType": "API_KEY",
             "apiKeyConfig": {
-              "apiKeyExpirationDays": 30,
+              "apiKeyExpirationDays": 365,
+              "apiKeyExpirationDate": "2023-12-12T19:52:28.429Z",
               "description": "api key description"
             }
           },
