--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "dependencies": {
         "@aws-amplify/datastore": "^3.14.4",
         "@aws-amplify/ui-react": "^3.5.11",
-        "aws-amplify": "^4.3.43",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "aws-amplify": "^4.3.43",
         "react": "^18.2.0",
         "react-colorful": "^5.6.1",
         "react-dom": "^18.2.0",
@@ -22,7 +22,8 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "amplify-modelgen": "node amplify\\scripts\\amplify-modelgen.js",
-        "amplify-push": "node amplify\\scripts\\amplify-push.js"
+        "amplify-push": "node amplify\\scripts\\amplify-push.js",
+        "cypress:open": "cypress open"
     },
     "eslintConfig": {
         "extends": [
@@ -43,6 +44,8 @@
         ]
     },
     "devDependencies": {
+        "cypress": "^12.1.0",
+        "eslint-plugin-cypress": "^2.12.1",
         "ini": "^1.3.5",
         "inquirer": "^6.5.1"
     }
