--- a/package.json
+++ b/package.json
@@ -1,52 +1,47 @@
 {
-    "name": "citizen-ticket-challenge",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@aws-amplify/datastore": "^3.14.4",
-        "@aws-amplify/ui-react": "^3.5.11",
-        "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "aws-amplify": "^4.3.43",
-        "react": "^18.2.0",
-        "react-colorful": "^5.6.1",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.4.5",
-        "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "amplify-modelgen": "node amplify\\scripts\\amplify-modelgen.js",
-        "amplify-push": "node amplify\\scripts\\amplify-push.js",
-        "cypress:open": "cypress open"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "cypress": "^12.1.0",
-        "eslint-plugin-cypress": "^2.12.1",
-        "ini": "^1.3.5",
-        "inquirer": "^6.5.1"
-    }
+  "name": "citizen-ticket-challenge",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@aws-amplify/datastore": "^3.14.4",
+    "@aws-amplify/ui-react": "^3.5.11",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "aws-amplify": "^4.3.43",
+    "eslint": "^8.29.0",
+    "prettier": "^2.8.1",
+    "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
+    "react-scripts": "5.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "amplify-modelgen": "node amplify\\scripts\\amplify-modelgen.js",
+    "amplify-push": "node amplify\\scripts\\amplify-push.js",
+    "cypress:open": "cypress open"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "cypress": "^12.1.0",
+    "ini": "^1.3.5",
+    "inquirer": "^6.5.1",
+    "web-vitals": "^3.1.0"
+  }
 }
